--- a/OpayDonateBar/MainWindow.xaml
+++ b/OpayDonateBar/MainWindow.xaml
@@ -5,12 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OpayDonateBar"
         mc:Ignorable="d"
-        Title="MainWindow" Height="370.667" Width="429.333">
-    <Grid Margin="0,0,3.667,-0.667">
-        <TextBlock HorizontalAlignment="Left" Margin="50,21,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" Height="26" FontSize="16"><Run Text="1."/><Run Text="點這裡看如何在StreamLabs建立Apps"/></TextBlock>
-        <TextBlock HorizontalAlignment="Left" Margin="50,61,0,0" TextWrapping="Wrap" Text="2.填入網址中code=後面的文字" VerticalAlignment="Top" Width="324" FontSize="16" Height="28"/>
-        <TextBox HorizontalAlignment="Left" Height="27" Margin="69,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
-        <TextBlock HorizontalAlignment="Left" Margin="50,133,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" Height="28" FontSize="16"><Run Text="3"/><Run Text="."/><Run Text="填入歐付寶"/><Run Text="網址中/Donate/後面的文字"/></TextBlock>
-        <TextBox HorizontalAlignment="Left" Height="28" Margin="69,166,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
+        Title="MainWindow" Height="370" Width="430">
+    <Grid Margin="0,0,0,0">
+        <Label Content="Label" HorizontalAlignment="Left" Margin="47,28,0,0" VerticalAlignment="Top" Width="69" Height="29"/>
     </Grid>
 </Window>
