--- a/OpayDonateBar/Setting.xaml
+++ b/OpayDonateBar/Setting.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OpayDonateBar"
         mc:Ignorable="d"
-        Title="設定" Height="300" Width="370">
+        Title="設定" Height="300" Width="370" Closing="Window_Closed">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="25,23,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" Height="26" FontSize="16"><Run Text="1."/><Run Text="點這裡看如何在StreamLabs建立Apps"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="25,63,0,0" TextWrapping="Wrap" Text="2.填入網址中code=後面的文字" VerticalAlignment="Top" Width="324" FontSize="16" Height="28"/>
         <TextBox HorizontalAlignment="Left" Height="28" Margin="44,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
         <TextBlock HorizontalAlignment="Left" Margin="25,135,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="28" FontSize="16"><Run Text="3"/><Run Text="."/><Run Text="填入歐付寶"/><Run Text="網址中/Donate/後面的文字"/></TextBlock>
-        <TextBox HorizontalAlignment="Left" Height="28" Margin="44,170,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
+        <TextBox HorizontalAlignment="Left" Height="28" Margin="44,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
         <Button Content="確定" HorizontalAlignment="Left" Margin="135,222,0,0" VerticalAlignment="Top" Width="100" Height="20"/>
 
     </Grid>
