--- a/OpayDonateBar/Setting.xaml
+++ b/OpayDonateBar/Setting.xaml
@@ -5,14 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OpayDonateBar"
         mc:Ignorable="d"
-        Title="設定" Height="300" Width="370">
+        Title="設定" Height="450
+        " Width="370">
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="25,23,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="290" Height="26" FontSize="16"><Run Text="1."/><Run Text="點這裡看如何在StreamLabs建立Apps"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="25,63,0,0" TextWrapping="Wrap" Text="2.填入網址中code=後面的文字" VerticalAlignment="Top" Width="324" FontSize="16" Height="28"/>
         <TextBox x:Name="code" HorizontalAlignment="Left" Height="28" Margin="44,94,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
-        <TextBlock HorizontalAlignment="Left" Margin="25,135,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="28" FontSize="16"><Run Text="3"/><Run Text="."/><Run Text="填入歐付寶"/><Run Text="網址中/Donate/後面的文字"/></TextBlock>
-        <TextBox x:Name="opayid" HorizontalAlignment="Left" Height="28" Margin="44,171,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
-        <Button Content="確定" HorizontalAlignment="Left" Margin="135,222,0,0" VerticalAlignment="Top" Width="100" Height="20" Click="Button_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="25,285,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300" Height="28" FontSize="16"><Run Text="5"/><Run Text="."/><Run Text="填入歐付寶"/><Run Text="網址中/Donate/後面的文字"/></TextBlock>
+        <TextBox x:Name="opayid" HorizontalAlignment="Left" Height="28" Margin="44,321,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
+        <Button Content="確定" HorizontalAlignment="Left" Margin="135,374,0,0" VerticalAlignment="Top" Width="100" Height="20" Click="Button_Click"/>
+        <TextBlock HorizontalAlignment="Left" Margin="25,132,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="324" FontSize="16" Height="28"><Run Text="3"/><Run Text=".填入Client ID"/></TextBlock>
+        <TextBox x:Name="client_id" HorizontalAlignment="Left" Height="28" Margin="44,163,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
+        <TextBlock HorizontalAlignment="Left" Margin="25,209,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="324" FontSize="16" Height="28"><Run Text="4"/><Run Text=".填入Client Secret"/></TextBlock>
+        <TextBox x:Name="client_secret" HorizontalAlignment="Left" Height="28" Margin="44,240,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="271" FontSize="16"/>
 
     </Grid>
 </Window>
